activity_form2b_test.xml masked

--- a/app/src/main/res/layout/activity_form2b_test.xml
+++ b/app/src/main/res/layout/activity_form2b_test.xml
@@ -280,9 +280,8 @@
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:gravity="center"
-                                android:maxLength="5"
-                                android:hint="###"
-                                android:inputType="numberDecimal"
+                                android:hint="##.##"
+                                app:mask="##.##"
                                 app:maxValue="100"
                                 app:minValue="0"
                                 app:type="range" />
@@ -314,9 +313,8 @@
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:gravity="center"
-                                android:maxLength="5"
-                                android:hint="###"
-                                android:inputType="numberDecimal"
+                                android:hint="##.##"
+                                app:mask="##.##"
                                 app:maxValue="100"
                                 app:minValue="0"
                                 app:type="range" />
@@ -348,9 +346,8 @@
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:gravity="center"
-                                android:maxLength="5"
-                                android:hint="###"
-                                android:inputType="numberDecimal"
+                                android:hint="##.##"
+                                app:mask="##.##"
                                 app:maxValue="100"
                                 app:minValue="0"
                                 app:type="range" />
